tests/e2e/corpus/err_divide_string.err
[line 1] runtime error: operands must be numbers
