tests/e2e/corpus/err_divide_string.lum
print 10 / "two";
